prevented overflow

--- a/my-app/src/components/Cube/Cube.css
+++ b/my-app/src/components/Cube/Cube.css
@@ -12,6 +12,8 @@ body
     align-items: center;
     min-height: 100vh;
     background: #25335b;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .container {
